:bug:Fix markdown preview from bleeding passed border
The mark down preview would bleed past the bottom of the border around the
preview. This was because the border was fixed with a total hight. This change
set updates the style to give the border a min-height allowing it to grow if the
markdown is taller.

--- a/frontend/src/app/kata/add-kata/add-kata.component.scss
+++ b/frontend/src/app/kata/add-kata/add-kata.component.scss
@@ -1,6 +1,6 @@
 form {
   textarea, #preview {
-    height: 250px;
+    min-height: 250px;
   }
 
   #preview {
